// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatlabCard snapshot snapshot: renders matlab setting card 1`] = `
<SettingsOption
  className=""
  extraSections={Array []}
  none={false}
  summary="matlab_api_key"
  title="MATLAB API Key"
>
  <div
    className="halfSpacedMessage"
  >
    <span>
      <FormattedMessage
        defaultMessage="Enter the API key provided by MathWorks for accessing the MATLAB Hosted Service. This key is granted for exclusive use by this course for the specified duration."
        description="Matlab settings card text 1"
        id="authoring.problemeditor.settings.matlab.text.one"
      />
    </span>
  </div>
  <div
    className="spacedMessage"
  >
    <span>
      <FormattedMessage
        defaultMessage="Please do not share the API key with other courses and notify MathWorks immediately if you believe the key is exposed or compromised. To obtain a key for your course, or to report an issue please contact"
        description="Matlab settings card text 2"
        id="authoring.problemeditor.settings.matlab.text.two"
      />
       
      <MailtoLink
        to="moocsupport@mathworks.com"
      >
        moocsupport@mathworks.com
      </MailtoLink>
    </span>
  </div>
  <Form.Group>
    <Form.Control
      floatingLabel="API Key"
      onChange={[MockFunction matlabCardHooks.handleChange]}
      value="matlab_api_key"
    />
  </Form.Group>
</SettingsOption>
`;

exports[`MatlabCard snapshot snapshot: renders matlab setting card no key 1`] = `
<SettingsOption
  className=""
  extraSections={Array []}
  none={true}
  summary="None"
  title="MATLAB API Key"
>
  <div
    className="halfSpacedMessage"
  >
    <span>
      <FormattedMessage
        defaultMessage="Enter the API key provided by MathWorks for accessing the MATLAB Hosted Service. This key is granted for exclusive use by this course for the specified duration."
        description="Matlab settings card text 1"
        id="authoring.problemeditor.settings.matlab.text.one"
      />
    </span>
  </div>
  <div
    className="spacedMessage"
  >
    <span>
      <FormattedMessage
        defaultMessage="Please do not share the API key with other courses and notify MathWorks immediately if you believe the key is exposed or compromised. To obtain a key for your course, or to report an issue please contact"
        description="Matlab settings card text 2"
        id="authoring.problemeditor.settings.matlab.text.two"
      />
       
      <MailtoLink
        to="moocsupport@mathworks.com"
      >
        moocsupport@mathworks.com
      </MailtoLink>
    </span>
  </div>
  <Form.Group>
    <Form.Control
      floatingLabel="API Key"
      onChange={[MockFunction matlabCardHooks.handleChange]}
      value=""
    />
  </Form.Group>
</SettingsOption>
`;
